# mammut

./: .gitignore  AUTHORS  CMakeLists.bak  CMakeLists.txt  CMakeLists.txt.orig  README.md  doxygen.cfg
cmake/: Custom.cmake  FindFMOD.cmake  PlatformMacOS.cmake  PlatformWindowsMSVC.cmake
data/: NeoSans.512.512.r.ub.raw  NeoSans.txt  P22UndergroundPro-Medium.txt  blur.frag  cave.frag  cave.geom  cave.vert  cuboid.frag  cuboid.vert  default.frag  default.vert  motionBlur.frag  motionBlurNM.frag  motionBlurTM.frag  motionBlurTM.vert  motionBlurTM_horizontal.frag  motionBlurTM_vertical.frag  quad.frag  quad.vert  ssao.frag  ssao.vert  string_drawer.frag
data/fonts/: P22UndergroundPro-Medium.1024.1024.r.ub.raw  P22UndergroundPro-Medium.txt  Symbols.raw  Symbols.txt  lightingSymbol.64.64.raw  lightingSymbol.txt
data/models/: tusk.mtl
data/shaders/: Fxaa3_11.h  blur.frag  blur.vert  cave.frag  cave.vert  cuboid.frag  cuboid.vert  fxaa.frag  horizontal_blur.frag  horizontal_blur.vert  motionBlur.frag  motionBlurNM.frag  motionBlurTM.frag  motionBlurTM_horizontal.frag  particle.frag  particle.geom  particle.vert  quad.frag  screenshot_background.frag  screenshot_background.vert  ssao.frag  ssao.vert  ssao_output.frag  string_drawer.vert  tets.frag  tets.vert  vertical_blur.frag  vertical_blur.vert
source/: AbstractApplication.cpp  AbstractApplication.h  AbstractContext.cpp  AbstractContext.h  AbstractCoordinateProvider.h  AbstractPainter.cpp  AbstractPainter.h  AdaptiveGrid.cpp  AdaptiveGrid.h  Application.cpp  Application.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CachedValue.h  CachedValue.hpp  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CaveDrawable.cpp  CaveDrawable.h  ChronoTimer.h  ChunkGenerator.cpp  Commons.h  Conversions.cpp  Conversions.h  Cuboid.cpp  Cuboid.h  CuboidChunk.cpp  CuboidChunk.h  CyclicTime.cpp  CyclicTime.h  DebugPainter.cpp  DebugPainter.h  Drawable.cpp  Drawable.h  FileAssociatedAsset.cpp  FileAssociatedShader.cpp  FileAssociatedShader.h  Format.cpp  (+50 more)
source/game_mechanics/: ChunkGenerator.h  Cuboid.cpp  GameCamera.cpp  GameCamera.h  GameMechanics.cpp  GameMechanics.h  Gravity.h  Mammut.cpp  Mammut.h  MammutPhysics.cpp  MammutPhysics.h  PhysicsObject.h  PhysicsWorld.cpp  PhysicsWorld.h  TetGenerator.cpp  TetGenerator.h
source/game_world_rendering/: Canvas.cpp  Canvas.h  CavePainter.cpp  CavePainter.h  CuboidDrawable.cpp  FileAssociatedAsset.cpp  FileAssociatedShader.h  GameWorldRenderer.cpp  GameWorldRenderer.h  GameWorldRenderer.h.orig  HUD.cpp  HUD.h  IDrawable.h  MotionBlur.cpp  MotionBlur.h  Painter.h  RawFile.h  SSAO.cpp  StringDrawer.cpp  StringDrawer.h
source/gamelogic/: ChunkGenerator.cpp  ChunkGenerator.h  Cuboid.cpp  CuboidChunk.cpp  CuboidChunk.h  GameCamera.cpp  GameLogic.cpp  GameLogic.h  GameMechanics.cpp  GameMechanics.h  GameObject.cpp  GameObject.h  Gravity.cpp  Gravity.h  Mammut.cpp  Mammut.h  MammutMotionState.cpp  MammutMotionState.h
source/logic/: Mechanics.cpp  Mechanics.h
source/logic/highscore/: HighscoreEntry.cpp  HighscoreEntry.h  HighscoreList.cpp  HighscoreList.h
source/logic/menu/: ControlsMenu.cpp  ControlsMenu.h  CreditsMenu.cpp  CreditsMenu.h  GameOverMenu.cpp  GameOverMenu.h  HighscoreItem.cpp  HighscoreItem.h  HighscoreMenu.cpp  HighscoreMenu.h  HowtoMenu.cpp  HowtoMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuButton.cpp  MenuInput.cpp  MenuInput.h  MenuItem.cpp  MenuItem.h  MenuLogo.h  NewHighscoreMenu.cpp  NewHighscoreMenu.h  PauseMenu.cpp  PauseMenu.h
source/logic/menu/items/: ControlsItem.cpp  ControlsItem.h  ControlsListItem.cpp  ControlsListItem.h  CreditsItem.cpp  CreditsItem.h  CreditsListItem.cpp  CreditsListItem.h  HighscoreItem.cpp  HighscoreListItem.cpp  (+14 more)
source/logic/world/: Cave.cpp  Cave.h  ChunkGenerator.cpp  ChunkGenerator.h  Cuboid.cpp  Cuboid.h  CuboidChunk.cpp  CuboidChunk.h  GameCamera.cpp  GameCamera.h  GameMechanics.cpp  GameMechanics.h  GrammarBasedChunkGenerator.cpp  GrammarBasedChunkGenerator.h  LevelStartChunkGenerator.cpp  LevelStartChunkGenerator.h  Mammut.cpp  Mammut.h  MammutPhysics.cpp  MammutPhysics.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsWorld.cpp  PhysicsWorld.h
source/menu/: MainMenu.cpp  Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h  MenuItem.cpp  MenuItem.h  MenuMechanics.cpp  MenuMechanics.h  MenuRenderer.cpp  MenuRenderer.h  PauseMenu.cpp  StartMenu.cpp  StartMenu.h
source/rendering/: AbstractPainter.h  Canvas.cpp  Canvas.h  CaveDrawable.cpp  CaveDrawable.cpp.orig  CaveDrawable.h  CavePainter.cpp  CharacterDrawable.cpp  CharacterDrawable.h  FileAssociatedAsset.h  FileAssociatedShader.cpp  FileAssociatedShader.h  GameWorldRenderer.cpp  HUD.cpp  IDrawable.h  RawFile.h  RenderCamera.cpp  Renderer.cpp  Renderer.h  Renderer.h.orig  StringComposer.cpp  StringComposer.h  StringDrawer.cpp  StringDrawer.h
source/rendering/menu/: AbstractBackground.cpp  AbstractBackground.h  BlankBackground.cpp  BlankBackground.h  MenuRenderer.cpp  MenuRenderer.h  ScreenshotBackground.cpp  ScreenshotBackground.h
source/rendering/text/: CharacterDrawable.cpp  CharacterDrawable.h  SDFRenderer.cpp  SDFRenderer.h  StringComposer.cpp  StringComposer.h  StringDrawer.cpp  StringDrawer.h  SymbolRenderer.cpp  SymbolRenderer.h  TextRenderer.cpp  TextRenderer.h
source/rendering/world/: AbstractPainter.cpp  AbstractPainter.h  AbstractPostProc.h  BunchOfTetsDrawable.cpp  BunchOfTetsDrawable.h  BunchRenderer.cpp  BunchRenderer.h  CaveDrawable.cpp  CaveDrawable.h  CavePainter.cpp  CavePainter.h  CuboidDrawable.cpp  CuboidDrawable.h  CuboidRenderer.cpp  CuboidRenderer.h  DrawableInterface.h  FileAssociatedAsset.h  GameWorldRenderer.cpp  GameWorldRenderer.h  HUD.cpp  HUD.h  MotionBlurPass.cpp  MotionBlurPass.h  MotionBlurPostProc.cpp  MotionBlurPostProc.h  Painter.cpp  Painter.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleRenderer.cpp  ParticleRenderer.h  PostProcInterface.h  PostprocessingPass.cpp  PostprocessingPass.h  RenderCamera.cpp  RenderCamera.h  SSAO.cpp  SSAO.h  SSAOPass.cpp  SSAOPass.h  (+8 more)
source/sound/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h
(+20 files in other folders)
